<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/solution_tv"
        android:text="@string/_0"
        android:textSize="32sp"
        android:textColor="@color/black"
        android:textAlignment="textEnd"
        android:layout_above="@id/result_tv"
        android:layout_margin="16dp">

    </TextView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/result_tv"
        android:text="@string/zero"
        android:textSize="64sp"
        android:textColor="@color/black"
        android:textAlignment="textEnd"
        android:layout_above="@id/button_layout"
        android:layout_margin="16dp">

    </TextView>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:id="@+id/button_layout"
        android:orientation="vertical"
        android:paddingVertical="16dp"
        android:background="#D1C4C4"
        android:layout_alignParentBottom="true">

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:gravity="center"
           android:orientation="horizontal">

           <com.google.android.material.button.MaterialButton
               android:layout_width="72dp"
               android:layout_height="72dp"
               app:cornerRadius="36dp"
               style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
               android:text="@string/c"
               android:layout_margin="12dp"
               android:backgroundTint="#F44336"
               android:id="@+id/btn_c"
               android:textSize="32sp">

           </com.google.android.material.button.MaterialButton>
           <com.google.android.material.button.MaterialButton
               android:layout_width="72dp"
               android:layout_height="72dp"
               app:cornerRadius="36dp"
               style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
               android:text="@string/openbrack"
               android:layout_margin="12dp"
               android:backgroundTint="#787676"
               android:id="@+id/btn_openbracket"
               android:textSize="32sp">

           </com.google.android.material.button.MaterialButton>
           <com.google.android.material.button.MaterialButton
               android:layout_width="72dp"
               android:layout_height="72dp"
               app:cornerRadius="36dp"
               style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
               android:text="@string/closebrack"
               android:layout_margin="12dp"
               android:backgroundTint="#787676"
               android:id="@+id/btn_closebracket"
               android:textSize="32sp">

           </com.google.android.material.button.MaterialButton>

           <com.google.android.material.button.MaterialButton
               android:id="@+id/btn_divison"
               style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
               android:layout_width="72dp"
               android:layout_height="72dp"
               android:layout_margin="12dp"
               android:backgroundTint="#FF9800"
               android:text="@string/div"
               android:textColor="#795548"
               android:textSize="32sp"
               app:cornerRadius="36dp">

           </com.google.android.material.button.MaterialButton>

       </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_7"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:backgroundTint="#09D7EA"
                android:text="@string/_7"
                android:textColor="#546E7A"
                android:textSize="32sp"
                app:cornerRadius="36dp">

            </com.google.android.material.button.MaterialButton>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_8"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:backgroundTint="#09D7EA"
                android:text="@string/_8"
                android:textColor="#546E7A"
                android:textSize="32sp"
                app:cornerRadius="36dp">

            </com.google.android.material.button.MaterialButton>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_9"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:backgroundTint="#09D7EA"
                android:text="@string/_9"
                android:textColor="#546E7A"
                android:textSize="32sp"
                app:cornerRadius="36dp">

            </com.google.android.material.button.MaterialButton>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_multiplication"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:backgroundTint="#FF9800"
                android:text="@string/mul"
                android:textColor="#795548"
                android:textSize="32sp"
                app:cornerRadius="36dp">

            </com.google.android.material.button.MaterialButton>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_4"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:backgroundTint="#09D7EA"
                android:text="@string/_4"
                android:textColor="#546E7A"
                android:textSize="32sp"
                app:cornerRadius="36dp">

            </com.google.android.material.button.MaterialButton>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_5"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:backgroundTint="#09D7EA"
                android:text="@string/_5"
                android:textColor="#546E7A"
                android:textSize="32sp"
                app:cornerRadius="36dp">

            </com.google.android.material.button.MaterialButton>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_6"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:backgroundTint="#09D7EA"
                android:text="@string/_6"
                android:textColor="#546E7A"
                android:textSize="32sp"
                app:cornerRadius="36dp">

            </com.google.android.material.button.MaterialButton>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_subtraction"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:backgroundTint="#FF9800"
                android:text="@string/minus"
                android:textColor="#795548"
                android:textSize="32sp"
                app:cornerRadius="36dp">

            </com.google.android.material.button.MaterialButton>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_1"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:backgroundTint="#09D7EA"
                android:text="@string/_1"
                android:textColor="#546E7A"
                android:textSize="32sp"
                app:cornerRadius="36dp">

            </com.google.android.material.button.MaterialButton>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_2"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:backgroundTint="#09D7EA"
                android:text="@string/_2"
                android:textColor="#546E7A"
                android:textSize="32sp"
                app:cornerRadius="36dp">

            </com.google.android.material.button.MaterialButton>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_3"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:backgroundTint="#09D7EA"
                android:text="@string/_3"
                android:textColor="#546E7A"
                android:textSize="32sp"
                app:cornerRadius="36dp">

            </com.google.android.material.button.MaterialButton>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_addition"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:backgroundTint="#FF9800"
                android:text="@string/add"
                android:textColor="#795548"
                android:textSize="32sp"
                app:cornerRadius="36dp">

            </com.google.android.material.button.MaterialButton>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:text="@string/ac"
                android:layout_margin="12dp"
                android:backgroundTint="#F44336"
                android:id="@+id/btn_Ac"
                android:textSize="19sp">

            </com.google.android.material.button.MaterialButton>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_zero"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:backgroundTint="#09D7EA"
                android:text="@string/Zero"
                android:textColor="#546E7A"
                android:textSize="32sp"
                app:cornerRadius="36dp"
                tools:ignore="DuplicateSpeakableTextCheck">

            </com.google.android.material.button.MaterialButton>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_dot"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:backgroundTint="#09D7EA"
                android:text="@string/dot"
                android:textColor="#546E7A"
                android:textSize="32sp"
                app:cornerRadius="36dp">

            </com.google.android.material.button.MaterialButton>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_equal"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:backgroundTint="#FF9800"
                android:text="@string/equal"
                android:textColor="#795548"
                android:textSize="32sp"
                app:cornerRadius="36dp">

            </com.google.android.material.button.MaterialButton>

        </LinearLayout>
    </LinearLayout>
</RelativeLayout>